--- a/deploy/roles/full-app/templates/docker-compose.yml
+++ b/deploy/roles/full-app/templates/docker-compose.yml
@@ -18,6 +18,23 @@ services:
       interval: 2s
       timeout: 5s
       retries: 10
+  postgres-prometheus:
+    image: prometheuscommunity/postgres-exporter:latest
+    labels:
+      <<: *common-labels
+{% if expose_ports %}
+    ports:
+      - "{{ tailscale_ip }}:${DB_METRICS_PORT:-0}:9187"
+{% endif %}
+    environment:
+      - DATA_SOURCE_URI: "db:5432/postgres?sslmode=disable"
+      - DATA_SOURCE_USER: "{{ lookup('env','DB_USER', default='postgres') }}"
+      - DATA_SOURCE_PASS: "{{ db_password }}"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9187/metrics"]
+      interval: 2s
+      timeout: 5s
+      retries: 10
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
