--- a/deploy/roles/full-app/tasks/github_main_deployments.yml
+++ b/deploy/roles/full-app/tasks/github_main_deployments.yml
@@ -26,7 +26,7 @@
       Accept: "application/vnd.github.v3+json"
     body_format: json
     body:
-      ref: "{{ github_sha }}"
+      ref: "{{ dango_image_tag }}"
       environment: "{{ item.name }}"
       description: "{{ item.description }}"
       auto_merge: false
@@ -71,5 +71,5 @@
     | **Dango GraphQL** | [http://{{ tailscale_ip }}:{{ dango_port }}/graphql](http://{{ tailscale_ip }}:{{ dango_port }}/graphql) |
     | **Faucet bot** | [http://{{ tailscale_ip }}:{{ faucet_port }}](http://{{ tailscale_ip }}:{{ faucet_port }}) |
     | **Deployment name** | `{{ deployment_name }}` |
-    | **Commit** | `{{ github_sha }}` |
+    | **Commit** | `{{ dango_image_tag }}` |
     EOF
