--- a/.github/workflows/faucet.yml
+++ b/.github/workflows/faucet.yml
@@ -43,15 +43,12 @@ jobs:
       - name: Install Ansible
         run: |
           pipx install ansible
-          pipx ensurepath
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
-          ln -sf -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
+          ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
           ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-playbook ~/.local/bin/ansible-playbook
       - name: Install collections
         run: |
-          pipx ensurepath
           ansible-galaxy collection install -r deploy/requirements.yml
-
       - name: Set target IP
         id: set_ip
         run: |
@@ -60,9 +57,7 @@ jobs:
           elif [ "${{ github.event.inputs.environment }}" = "testnet" ]; then
             echo "SERVER_IP=100.107.248.71" >> $GITHUB_ENV
           fi
-
       - name: Run Ansible playbook
         run: |
           cd deploy
-          pipx ensurepath
           ansible-playbook bots.yml --limit ${{ env.SERVER_IP }} -e '{"dango_networks":["${{ github.event.inputs.environment }}"]}' -e faucet_version=${{ github.event.inputs.faucet_version }}
