--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,5 @@
 name: Rust
 
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
@@ -540,20 +539,18 @@ jobs:
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-      - name: Ensure ~/.local/bin is in PATH
-        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-      - name: Install Ansible & Docker SDK
+      - name: Install Ansible
         run: |
           pipx install ansible
-          pipx ensurepath
-          ln -f -s ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+          ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-galaxy ~/.local/bin/ansible-galaxy
           ln -sf ~/.local/pipx/venvs/ansible/bin/ansible-playbook ~/.local/bin/ansible-playbook
-          cd deploy
-          ansible-galaxy collection install -r requirements.yml
+      - name: Install collections
+        run: |
+          ansible-galaxy collection install -r deploy/requirements.yml
       - name: Run Ansible playbook
         run: |
           cd deploy
-          pipx ensurepath
 
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             ansible-playbook full-app.yml -e traefik_enabled=true
